resets at local time probably

--- a/popup.html
+++ b/popup.html
@@ -10,6 +10,7 @@
       <img src="icon.png" alt="YouTube Icon" class="icon" />
       <h2>YouTube Time Tracker</h2>
       <div id="timer" class="timer">00:00:00</div>
+      <div style="font-size: 0.8em; color: #ccc;" id="date"></div>
       <button id="reset" class="reset-btn">Reset</button>
     </div>
     <script src="popup.js"></script>
